# auto-pch

./: .gitmodules  CMakeLists.txt
pch/: auto-pch.pch.hpp
src/: auto-pch.cpp
